--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@types/leaflet": "^1.7.8",
     "classnames": "2.3.1",
     "date-fns": "2.21.3",
     "gray-matter": "4.0.3",
+    "leaflet": "^1.7.1",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
+    "leaflet-geosearch": "^3.6.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.2",
+    "react-leaflet-providers": "^1.0.0",
     "remark": "13.0.0",
     "remark-html": "^13.0.2",
     "typescript": "^4.2.4"
