--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-leaflet-providers": "^1.0.0",
     "remark": "13.0.0",
     "remark-html": "^13.0.2",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
