--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "leaflet-geosearch": "^3.6.0",
     "next": "latest",
     "react": "^17.0.2",
+    "react-alice-carousel": "^2.6.4",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.2",
     "react-leaflet-providers": "^1.0.0",
