--- a/.forestry/front_matter/templates/home.yml
+++ b/.forestry/front_matter/templates/home.yml
@@ -7,6 +7,11 @@ fields:
   config:
     required: false
   label: page title
+- name: hero_image_description
+  type: text
+  config:
+    required: false
+  label: hero image description
 - name: subtitles_hero
   type: field_group_list
   fields:
