changes data folder and pathes

--- a/.forestry/front_matter/templates/footer.yml
+++ b/.forestry/front_matter/templates/footer.yml
@@ -36,4 +36,4 @@ fields:
     required: false
   label: boxtribute trademark
 pages:
-- _sections/footer/footer_data.md
+- data/footer/footer_data.md
