--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "classnames": "2.3.1",
     "date-fns": "2.21.3",
     "gray-matter": "4.0.3",
+    "install": "^0.13.0",
     "leaflet": "^1.7.1",
     "leaflet-defaulticon-compatibility": "^0.1.1",
     "leaflet-geosearch": "^3.6.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.6.4",
+    "react-animated-number": "^0.4.4",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.2",
     "react-leaflet-providers": "^1.0.0",
