--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.2",
     "react-leaflet-providers": "^1.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "remark": "13.0.0",
     "remark-html": "^13.0.2",
     "typescript": "^4.2.4",
