--- a/.forestry/front_matter/templates/about_us.yml
+++ b/.forestry/front_matter/templates/about_us.yml
@@ -69,7 +69,7 @@ fields:
     max: 
     labelField: 
   label: text with picture for the story
-- name: 1_text_block
+- name: text_block_1
   type: textarea
   default: ''
   config:
@@ -83,7 +83,7 @@ fields:
   config:
     maxSize: 64
   label: full width picture
-- name: 2_text_block
+- name: text_block_2
   type: textarea
   default: ''
   config:
@@ -92,7 +92,7 @@ fields:
     schema:
       format: markdown
   label: 2 text block
-- name: 3_text_block
+- name: text_block_3
   type: textarea
   default: ''
   config:
