--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -28,7 +28,7 @@ sections:
 - type: heading
   label: Our Mission
 - type: directory
-  path: data/ourmission
+  path: data/ourimpact
   label: our mission
   create: all
   match: "*"
